--- a/KanBan.Demo/Views/Shared/_Layout.cshtml
+++ b/KanBan.Demo/Views/Shared/_Layout.cshtml
@@ -57,6 +57,8 @@
 
       </div> <!-- /container -->
 
+       <script type="text/javascript" src="@Url.Content("~/signalr/hubs")"></script>
+
     @MvcHtmlString.Create(
         Bundle.JavaScript()
         .Add("~/Scripts/modernizr-2.5.3.js")
@@ -66,7 +68,6 @@
         .Add("~/Scripts/knockout.extenders.js")
         .Add("~/Scripts/underscore.js")
         .Add("~/Scripts/jquery.signalR-0.5.1.min.js")
-        .Add("~/signalr/hubs")
         .Render("~/App_Data/core_#.js"))
 
     @MvcHtmlString.Create(
