--- a/KanBan.Demo/Views/Shared/_Layout.cshtml
+++ b/KanBan.Demo/Views/Shared/_Layout.cshtml
@@ -31,7 +31,10 @@
   </head>
 
    <body>
-
+      <a href="https://github.com/jwcarroll/KanBan.Demo">
+        <img style="position: absolute; top: 0; right: 0; border: 0; z-index: 9999" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub">
+      </a>
+      
       <div class="navbar navbar-fixed-top">
          <div class="navbar-inner">
             <div class="container">
@@ -52,7 +55,8 @@
          <hr/>
 
          <footer>
-            <p>&copy; jwcarroll @DateTime.Now.Year</p>
+            <a href="https://twitter.com/share" class="twitter-share-button" data-text="Check out this demo using #knockoutjs, #ravendb and #signalr" data-hashtags="codestock">Tweet</a>
+            <a href="https://twitter.com/jwcarroll" class="twitter-follow-button" data-show-count="false">Follow @@jwcarroll</a>
          </footer>
 
       </div> <!-- /container -->
@@ -80,7 +84,10 @@
                 .Add("~/Scripts/ViewModels/ProjectViewModel.js")
                 .Add("~/Scripts/ViewModels/ProjectListViewModel.js")
         .Render("~/Content/viewModels_#.js"))
-        
+    
+    <script type="text/javascript">!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = "//platform.twitter.com/widgets.js"; fjs.parentNode.insertBefore(js, fjs); } } (document, "script", "twitter-wjs");</script>    
+    <script type="text/javascript">!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = "//platform.twitter.com/widgets.js"; fjs.parentNode.insertBefore(js, fjs); } } (document, "script", "twitter-wjs");</script>
+
     @RenderSection("AdditionalScript", false)
     
    </body>
