Stupid broken link

--- a/KanBan.Demo/Views/Shared/_Layout.cshtml
+++ b/KanBan.Demo/Views/Shared/_Layout.cshtml
@@ -38,10 +38,10 @@
       <div class="navbar navbar-fixed-top">
          <div class="navbar-inner">
             <div class="container">
-               <a class="brand" href="@Url.Action("Index", "Project")">KanBan Demo</a>
+               <a class="brand" href="@Url.Action("Index", "ProjectList")">KanBan Demo</a>
                <div class="nav-collapse">
                   <ul class="nav">
-                     @Html.NavigationListItem("Project", "Index", "Project")
+                     @Html.NavigationListItem("Project List", "Index", "ProjectList")
                   </ul>
                </div>
             </div>
